# cpp-testing

./: .devfile.yaml  .gitignore  CMakeLists.txt  expressions.h  functions.h  lifecycle.h  main  main.cpp  pointers.h  polymorphism.h  smart_pointers.h  statements.h  take_a_brake.h  templates.h  tests.cpp  tests2.cpp
.devcontainer/: Dockerfile  devcontainer.json
cpp-test/: main.cpp
cpp-test.xcodeproj/: project.pbxproj
cpp-test.xcodeproj/xcuserdata/jtp.xcuserdatad/xcschemes/: xcschememanagement.plist
tests/: test_alert_when_collision_imminent.cpp  test_initial_sensitivity_is_5.cpp  test_initial_speed_is_0.cpp  test_no_alert_when_no_collision_imminent.cpp  test_sensitivity_cannot_be_lt_one.cpp  test_speed_is_saved.cpp
